style: execute CommonStaticAnalysis OpenRewrite recipe